{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerCamera",
            "id": "6e7ffc51-c998-40a6-b8f3-a5fbada20fa8",
            "actions": [
                {
                    "name": "CameraRotation",
                    "type": "PassThrough",
                    "id": "3c768e53-ea9d-4a56-b436-da7bd394e5be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ffce5ff7-eefa-4efa-84e7-a3597f317e94",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMovement",
            "id": "a922cff9-cd30-4df4-bbb7-65235445cf41",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "7fcfd06e-7009-48e2-bf67-696a7a405d73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprinting",
                    "type": "PassThrough",
                    "id": "4b15db6c-81e6-4ee8-841a-325add787bce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "98401519-80f7-4ef5-92ab-de6d4381fa04",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "74a4b623-9278-419a-81d4-447e3434e9eb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e0d5df90-5c5c-4333-b7ac-1dd70ab3fced",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bc254c5c-2f41-4893-aa00-185f9ce70a1f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "504f4a0f-dccd-4695-b71e-7e11e1203cce",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "55e4e817-0bae-479b-b64d-c8e65e5012c2",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold(duration=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "Sprinting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}